order, user endpoint bugs fixed
