# src/main/java/kz/halykacademy/bookstore/web/orders/OrderController.java
@@ -45,11 +45,6 @@ public class OrderController {
         return orderService.postOrder(userDetails.getUsername(), saveOrder);
     }
 
-    @PutMapping("/{id}")
-    public Order putOrder(@AuthenticationPrincipal UserDetails userDetails, @PathVariable Long id, @RequestBody SaveOrder saveOrder) {
-        return orderService.putOrder(userDetails.getUsername(), id, saveOrder);
-    }
-
     @PutMapping("/changeStatus")
     public Order changeOrderStatus(@RequestParam Long id, @RequestParam String newStatus) {
         return orderService.changeOrderStatus(newStatus, id);
